# oxideav-stl

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  fuzz.yml
benches/: decode.rs  dedup.rs  encode.rs  geometry.rs  validate.rs
benches/common/: mod.rs
docs/: trace-contract.md
examples/: profile_decode_ascii.rs  profile_decode_binary.rs  profile_dedup_spatial.rs  profile_encode_ascii.rs  profile_encode_binary.rs  profile_geometry.rs  profile_validate.rs
examples/profile_common/: mod.rs
fuzz/: .gitignore  Cargo.toml
fuzz/corpus/decode/: seed_ascii_one_facet
fuzz/corpus/roundtrip/: seed_one_triangle
fuzz/fuzz_targets/: decode.rs  encode.rs  repair.rs  roundtrip.rs  triage.rs
src/: ascii.rs  binary.rs  color.rs  decoder.rs  encoder.rs  inspect.rs  lib.rs  lint.rs  materialise_header.rs  topology.rs  trace.rs  validate.rs
tests/: ascii_apply_pre_encode_extras.rs  ascii_comments.rs  ascii_lint.rs  ascii_precision.rs  ascii_roundtrip.rs  ascii_scientific.rs  auto_inject_unique_count.rs  bbox_geometry.rs  binary_roundtrip.rs  check_z_sorted.rs  color_extension.rs  cross_format.rs  detection.rs  detection_hardening.rs  encode_out_of_range_index.rs  inspect_binary_header.rs  materialise_header.rs  mesh_centroid.rs  mesh_edge_length_stats.rs  mesh_surface_area.rs  mesh_volume.rs  multi_solid.rs  per_face_attributes.rs  property_roundtrip.rs  repair_cap_boundary_loops.rs  repair_degenerate.rs  repair_normalize.rs  repair_normals.rs  repair_orient.rs  repair_sort_z.rs  repair_split_t_junctions.rs  repair_translate_octant.rs  repair_winding_consistency.rs  t_junction.rs  tolerance_dedup.rs  tolerance_dedup_spatial.rs  topology.rs  topology_rejection.rs  trace.rs  validate.rs
