[package]
name = "oxideav-stl-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

# STL is a two-flavour container — an ASCII token grammar and a packed
# binary record stream — with a layered detector that picks one path
# based on prefix + size sanity. The surface worth fuzzing splits into
# the same two paths:
#
#  * `decode`    — feed arbitrary bytes to `StlDecoder::decode` and
#                  assert it always returns a `Result` rather than
#                  panicking / aborting / OOMing. This drives the
#                  ASCII / binary sniffer AND both parsers behind it,
#                  exercising the classic STL danger spots:
#
#                    - 80-byte header + `uint32` triangle count in the
#                      binary path: a hostile count must not allocate
#                      `count * 50` bytes without cross-checking
#                      against `buf.len()`.
#                    - ASCII token walk: `solid` / `facet` / `outer
#                      loop` / `vertex` / `endloop` / `endfacet` /
#                      `endsolid`. A truncated facet block, missing
#                      keyword, or non-finite float literal must
#                      surface as `Err(Error::…)` rather than an
#                      arithmetic / index panic.
#                    - Multi-`solid` ASCII concatenation: the parser
#                      must not over-allocate the meshes vector when
#                      a hostile file declares thousands of empty
#                      solids.
#                    - Materialise / VisCAM colour header bytes in
#                      the 80-byte vendor string and per-face
#                      `uint16` attribute slot: the colour-convention
#                      detector reads them and must tolerate any
#                      distribution.
#                    - UTF-8 BOM + leading whitespace handling in the
#                      sniffer's prefix match.
#                    - Binary-size sanity override: `84 + N*50`
#                      exact-length classifies as binary even when
#                      the bytes start with `b"solid \n facet"`.
#
#  * `roundtrip` — synthesise a small valid binary STL from
#                  fuzz-controlled triangle count + raw triangle
#                  bytes, decode it through `StlDecoder`, re-encode
#                  through `StlEncoder::new_binary`, and assert the
#                  per-triangle records survive byte-for-byte. The
#                  80-byte header and `attribute_byte_count` slot are
#                  NOT required to match — the spec lets the writer
#                  pick any header string and zero out the attribute
#                  field, so the binary_roundtrip integration test
#                  applies that same record-only invariant.
#
#  * `triage`    — drive the three pre-decode inspectors on arbitrary
#                  bytes: `lint_ascii` (strict-spec ASCII conformance
#                  walk), `inspect_binary_header` (header + attribute-
#                  slot walk with no `count * 50` pre-allocation), and
#                  `detect_color_convention` (VisCAM / Materialise
#                  15-bit-RGB classification of an attribute-byte
#                  buffer). Each inspector hand-rolls its OWN byte
#                  scanner — none route through `StlDecoder` — so this
#                  target covers parser surfaces the `decode` /
#                  `roundtrip` targets never touch: the lint token loop
#                  + tab/sign/BOM scan + `MAX_REPORTED_LINT_FINDINGS`
#                  example cap, the inspector's hostile-count `min`
#                  cap + `triangle_count == 0` NaN-fraction branch, and
#                  the colour detector's `chunks_exact(2)` dangling-
#                  byte remainder. Contract: every call returns a value
#                  rather than panicking / indexing past the slice /
#                  dividing by a live zero.
#
#  * `repair`    — build an arbitrary `Scene3D` directly from fuzz
#                  bytes (multiple meshes / primitives, every
#                  `Topology`, indexed + unindexed, `U16`/`U32` index
#                  buffers with deliberately out-of-range entries,
#                  `normals` arrays whose length disagrees with
#                  `positions`, and NaN / Inf / subnormal coordinate
#                  bit-patterns) and drive the `validate` + `topology`
#                  (repair) surface that the byte-parsing targets never
#                  reach: `validate` with every rule on (including the
#                  opt-in `check_t_junctions` / `check_positive_octant`
#                  brute-force scans), `bbox` / `bbox_of_mesh` /
#                  `bbox_of_primitive`, `shells`, and every mutating
#                  repair pass in the documented pipeline order. Each
#                  pass takes a caller-controlled scene and must return
#                  its report rather than panic / index past a buffer /
#                  overflow on a bad index / divide by zero. Contract:
#                  every call returns.
#
# No external library worth dlopen-ing as a cross-decode oracle: the
# clean-room wall bars assimp / libigl / openSubdiv / three.js, and
# the format is simple enough that there's no canonical "what should
# this byte sequence mean" answer beyond the spec. Decode panic-
# freedom + self-roundtrip is the contract.

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.oxideav-stl]
path = ".."
default-features = false

[dependencies.oxideav-mesh3d]
version = "0.0"
default-features = false

# Prevent this fuzz package from being pulled into the umbrella
# workspace at `crates/*` glob-resolve time.
[workspace]
members = ["."]

[profile.release]
debug = 1

# ------------------------------------------------------------------
# Fuzz targets.
# ------------------------------------------------------------------

[[bin]]
name = "decode"
path = "fuzz_targets/decode.rs"
test = false
doc = false

[[bin]]
name = "roundtrip"
path = "fuzz_targets/roundtrip.rs"
test = false
doc = false

[[bin]]
name = "triage"
path = "fuzz_targets/triage.rs"
test = false
doc = false

[[bin]]
name = "repair"
path = "fuzz_targets/repair.rs"
test = false
doc = false
